cmake_minimum_required(VERSION 3.25)
project(bicycle_radar)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
find_library(GPIOD_LIBRARY NAMES gpiod REQUIRED)
find_package(PkgConfig REQUIRED)
find_package(PNG REQUIRED)
pkg_check_modules(Libcamera REQUIRED libcamera)
pkg_check_modules(LIBYUV REQUIRED libyuv)
include_directories(/usr/include)
include_directories(/usr/include/rpicam-apps)
aux_source_directory(./src/ all_src)
add_executable(bicycle_radar ${all_src})

target_link_libraries(bicycle_radar PRIVATE ${GPIOD_LIBRARY})
target_include_directories(bicycle_radar PRIVATE ${Libcamera_INCLUDE_DIRS})
target_link_libraries(bicycle_radar PRIVATE ${Libcamera_LIBRARIES})
target_link_libraries(bicycle_radar PRIVATE PNG::PNG)
target_include_directories(my_program PRIVATE ${LIBYUV_INCLUDE_DIRS})
target_link_libraries(bicycle_radar PRIVATE libyuv::libyuv)